[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mdrobot"
version = "0.0.1"
description = "RS485 / Modbus RTU driver for MDROBOT MD-series motor controllers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Taesu Yim", email = "taesuyim.kopo@gmail.com" }]
keywords = ["modbus", "rs485", "motor", "bldc", "ros2", "mdrobot"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = []

# pyserial는 Phase 2(transport)에서만 필요하므로 optional로 둔다.
[project.optional-dependencies]
serial = ["pyserial>=3.5"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["mdrobot*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
