<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mdrobot</name>
  <version>0.0.1</version>
  <description>
    RS485 / Modbus RTU communication library for MDROBOT MD-series BLDC/DC motor
    controllers. Pure Python (framing, CRC, protocol, registers, status, units)
    with single-channel and dual-channel motor driver classes. Can be used
    standalone (plain Python / pip) or as a dependency of the ROS 2 driver node.
  </description>
  <maintainer email="taesuyim.kopo@gmail.com">Taesu Yim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- pyserial: required only for real serial I/O (transport layer). -->
  <exec_depend>python3-serial</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
