<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mdrobot_ros2_driver</name>
  <version>0.0.1</version>
  <description>
    Generic ROS 2 driver node for MDROBOT MD-series BLDC/DC motor controllers
    (RS485 / Modbus RTU). Supports single-channel and dual-channel controllers via
    a device_type parameter. No robot kinematics — exposes per-motor velocity/position
    commands and motor state only.
  </description>
  <maintainer email="taesuyim.kopo@gmail.com">Taesu Yim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <!-- mdrobot: in-workspace Python communication library, built together by colcon. -->
  <exec_depend>mdrobot</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
